tests/golden/type_errors/non_exhaustive_number_literal_match.cd
print match 1 {
  1 => "one",
};
