tests/golden/type_errors/non_exhaustive_number_literal_match.err
Type error at 1:7: non-exhaustive match: missing wildcard or binding pattern
  print match 1 {
        ^
